# fizzer-socrates-it-2022

./: .gitignore  .stylish-haskell.yaml  Makefile  README.md  fizzbuzz-kata.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: Core.hs
test/: Spec.hs
