cabal-version:      3.0
name:               fizzbuzz-kata
version:            0.1.0.0
license:            NONE
author:             Matteo Baglini
maintainer:         matteo.baglini@gmail.com
build-type:         Simple

library
  hs-source-dirs:      src
  exposed-modules:     Core
  build-depends:       base
  default-language:    Haskell2010

executable fizzbuzz
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    base, fizzbuzz-kata
    default-language: Haskell2010

test-suite fizzbuzz-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, fizzbuzz-kata, hspec
  default-language:    Haskell2010